--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -128,6 +128,10 @@
         &__user
             flex-direction: column
             justify-content: center
+        &__search
+            &_mobile
+                &_visible
+                    margin-left: 0
         &-bottom
             display: none
             position: fixed
@@ -390,6 +394,12 @@
             &--horizontal
                 grid-column: span 5
 @media (max-width: 480px) 
+    .navbar
+        &__search
+            &_mobile
+                &_visible
+                    width: 245px
+                    margin-left: 0
     .hotel
         padding-right: 20px
         padding-bottom: 37px
